# Lrpc

./: CMakeLists.txt  LrpcHeader.proto  改进计划.md  设计概要.md
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  server  server_test
build2/log/: lrpc_2026_3_18.txt
example/callee/: Lservice.cc
example/caller/: LClient.cc
src/: LrpcApplication.cc  LrpcChannel.cc  LrpcConfig.cc  LrpcController.cc  LrpcHeader.pb.cc  LrpcLogger.cc  LrpcProvider.cc  zookeeperutil.cc
src/include/: LrpcApplication.h  LrpcChannel.h  LrpcConfig.h  LrpcController.h  LrpcHeader.pb.h  LrpcLogger.h  LrpcProvider.h  zookeeperutil.h
test/: configtest.cc  protobuf.cc  usrtest.cc
user/: user.pb.cc  user.pb.h  user.proto
